(bug 20234) change how Vector's tabs behave on small resolutions
Instead of overlapping, the "right" one will be displayed below the "left"
one. It might overlap page's title, but this is better than rendering
critical functions unreachable.

This also cleans up the CSS slightly, positioning left and right nav using
the same constructs (margins instead of absolute positioning).

Vector extension's ext.vector.collapsibleTabs has to be adjusted to work
with new styles; see change Ie34dce9a9 in Vector.

--- a/skins/vector/screen-hd.css
+++ b/skins/vector/screen-hd.css
@@ -18,7 +18,7 @@ div#footer {
 	margin-right: 1em;
 }
 #left-navigation {
-	left: 11em;
+	margin-left: 11em;
 }
 #p-personal {
 	right: 1em;
